--- a/consent_onboarding_script.qmd
+++ b/consent_onboarding_script.qmd
@@ -21,7 +21,7 @@ STAR Study Consent Form: https://uwmadison.co1.qualtrics.com/jfe/form/SV_6zzSu1d
 
 3. Make sure you have the script & FAQ open 
 
-
+4. Sometimes a participant might tell you something that will make it necessary to end the call without enrolling them. Examples of this are if they say they have been abstinent from opioids or have been on MAT for years (they are supposed to be within 1 month of quitting), or that they own more than one phone.
 
 ## Consent and Onboarding Script
 
@@ -38,7 +38,7 @@ STAR Study Consent Form: https://uwmadison.co1.qualtrics.com/jfe/form/SV_6zzSu1d
 
 *Great! First, I'm going to tell you more about today's session. I'll be talking about our research study and then, if you are eligible and interested, we can enroll you today. The entire process should take about 30 minutes, and if you have any questions at any point, feel free to interrupt me.*
 
-### Description of the study
+#### Description of the study
 
 *This is a 12-month study for people who are in recovery from opioids. It will involve using an Android smartphone app that was designed to help people in recovery, but it is not a treatment study, which means we will not be providing any treatment.*
 
@@ -60,7 +60,7 @@ STAR Study Consent Form: https://uwmadison.co1.qualtrics.com/jfe/form/SV_6zzSu1d
 
 **\[If yes, continue\]** **\[If no, thank and disconnect. No payment\]**
 
-### Confirm phone OS- UW only
+#### Confirm phone OS- UW only
 
 *Wonderful! So before we continue further, I'd just like to just verify that you do have an Android phone and that you have that phone available to you now?*
 
@@ -81,11 +81,9 @@ Mark Visit on google calendar as "ineligible - iPhone"
 
 *In this part of the visit, I am going to tell you a little bit more about the study and then give you the chance to formally agree to join it.*
 
-*I'm going to send you a link to an online consent form. Sometimes it takes a while to come through so don't worry if you don't see it yet. You won't need it until a little later, and if you have already received it, I'm going to ask that you hold off on opening it for now.*
+*I'm going to send you a link to an online consent form. Sometimes it takes a while to come through so don't worry if you don't see it for a few minutes. You won't need it until a little later, and if you have already received it, I'm going to ask that you hold off on opening it for now.*
 
-#### Consent Survey Link
-
-STAR Study Consent Form: https://uwmadison.co1.qualtrics.com/jfe/form/SV_6zzSu1ddmyfH46G
+**\[Switch to google voice and send the text message\]**\
 
 *Now I am going to tell you about the study goals and about the risks, benefits, and protections associated with being a participant in the study.*
 
@@ -112,6 +110,8 @@ STAR Study Consent Form: https://uwmadison.co1.qualtrics.com/jfe/form/SV_6zzSu1d
 - *Every day they fill out a short survey that asks how they are doing.*  
 - *Once a month, they fill out a longer survey that asks about their thoughts and experiences in the last month.*  
 
+#### App Data
+
 *I'd also like to tell you more about what we'll be doing with the smartphone data that people share with us. After I tell you about each item I'll pause and ask if you have any questions.*
 
 *People will be asked to give the app permission to access their phone data, text messages, and their location data.*  
@@ -137,6 +137,9 @@ STAR Study Consent Form: https://uwmadison.co1.qualtrics.com/jfe/form/SV_6zzSu1d
 
 
 *It is also important that you know that any use of opioids or other drugs has NO effect on your participation. You can continue to participate regardless of when or how many times you might use opioids or other drugs. It is ONLY important that you HONESTLY report any opioid or drug use when asked about it in the surveys.*
+
+
+#### Risks/Benefits
 
 *Next we'll go over study risks and benefits. There are no major risks related to participation in this study. If you decide to participate, the main risk is that someone might see your information who should not.*
 
@@ -173,6 +176,8 @@ STAR Study Consent Form: https://uwmadison.co1.qualtrics.com/jfe/form/SV_6zzSu1d
 *The next step of the process is to make a formal decision about whether you want to be part of the study. In a minute, I'll have you click on that link I sent you, which will show you a Consent Form with all the information I just reviewed stated in more technical language. Then you'll be asked if you are ready to decide if you want to participate. If you do, you'll be asked a few questions, and these will take information that we need to pay you and help make sure our study includes different types of people.*
 
 *Then, finally, you'll download the app and set up an account.*
+
+#### Participant opens consent link & gives consent
 
 *Now is the time to open that link that I texted you. You should see a document that says "Consent Form" at the top. You can take as much time as you like to read it over and let me know when you are done. I will sit quietly here in case you have any questions.* 
 
@@ -229,6 +234,9 @@ STAR Study Consent Form: https://uwmadison.co1.qualtrics.com/jfe/form/SV_6zzSu1d
 *When you are ready, please tap continue to be taken to the next survey form and let me know when you have entered your date of birth.*
 
 *Great! Now we will get the app downloaded on your phone and set up your study account. If you are not currently on WIFI, this app download will use your cellular data. Will that be okay?*
+
+
+#### App Download
 
 *Great! Please tap continue, and the download should start automatically. The app will guide you through set up. You should agree to the permissions the app or your phone asks of you as it is setting up.*
 
@@ -292,6 +300,7 @@ STAR Study Consent Form: https://uwmadison.co1.qualtrics.com/jfe/form/SV_6zzSu1d
 
 *Do you have any questions on that?*
 
+#### App Guidelines
 
 *Now I want to take some time to tell you a bit about the STAR user guidelines. These guidelines were designed to make sure our participants and staff are protected and are treated professionally and with respect.*
 
@@ -307,7 +316,7 @@ STAR Study Consent Form: https://uwmadison.co1.qualtrics.com/jfe/form/SV_6zzSu1d
 
 *All in-app messages, posts, and phone calls with staff are subject to review by the STAR team, and staff will remove any discussion post, comment, or individual member who does not follow these guidelines. You can find more information about the app guidelines and the review process for violating app guidelines in the Study Information tab in the STAR App.*
 
-
+#### Final Steps
 
 *The final step of enrolling in the study will be to watch tutorial videos that describe the app's recovery resources and explain how to complete the different study tasks. You can find these video tutorials in a text message I will send to you shortly after we complete this phone call.*
 
@@ -337,85 +346,4 @@ STAR Study Consent Form: https://uwmadison.co1.qualtrics.com/jfe/form/SV_6zzSu1d
 *Thank you!*
 
 
-
-
-## Steps To Complete AFTER Successful Onboarding Session
-
-1. **In Google Calendar, mark the onboarding session as DONE**
-
-2.  **In Google Calendar, add the One-Week Check-In at the appropriate time, labeled with the participant's subid**
-
-3.  **Look in the STAR email account to get the participant's subid**: The email subject is "New Onboarding Form submitted"
-
-4.  **Look in the STAR email account to get the participant's subid **: The email subject is "A new person has signed up for STAR." 
-    a. Click the email where it says "View their account". This will open the STAR website.
-    b. Enter the user's subID in the text box for "Study ID"
-    c. Hit save.
-
-5.  **In the STAR website, send the STAR Welcome Message to the
-    new user via Direct Message**
-    
-    a. Make sure you are logged in as star@psych.wisc.edu (It should say "STAR Help (M-F 9am - 5pm Central)" in the sidebar menu)
-    
-    b. Go to Peer Support > Direct Messages
-
-    b. Send the following (including the HTML code around the links - it will render properly once you hit send)
-    
-    Subject: 
-    
-    *Welcome to STAR!*
-    
-    Body of message (be sure to change the follow up visit date and add your name):
-
-```
-Hello, Thank you again for talking with me earlier today and joining our study. Here are some links that might be helpful as you get started.
-    
-<a target=_blank href=https://starstudy.wisc.edu/>Our website</a>
-
-<a target=_blank href=https://starstudy.wisc.edu/faq/>A list of frequently asked questions about the payment, the app, and the study</a>
-
-<a target=_blank href=https://uwmadison.co1.qualtrics.com/jfe/form/SV_89fOXmASpmTIFEy>The STAR training video survey (this is the same link I texted you)</a>
-
-I'll be calling you again on* <INSERT DATE/TIME>. You should receive a letter in the mail from us with your payment card and instructions on how to get paid. You can reply to this message or call (608)-220-5670 if you have any questions before our call.
-
-Thanks again,
-
-<YOUR NAME>
-
-STAR Study Team
-```
-
-6.  **In Google Voice, add the participant's phone number to Contacts, with their 4-digit subid as their contact name**:
-    a. See instructions [here](google_voice.qmd)
-    
-7. **In Google Voice, send the welcome text message**
-    a. Send the following text:
-
-```
-Hello, welcome to STAR! This is the STAR Study support line, it is staffed Mon-Fri 9am to 5pm Central (Chicago) time. You can save this number in your contacts as STAR Study Support and direct any questions about the study or participation to this line.
-
-The next step is to complete a series of training videos for which you will be paid $20. They will take about 35 minutes to complete and you can do this any time in the next week.
-
-Here is the link to the training videos:
-https://uwmadison.co1.qualtrics.com/jfe/form/SV_89fOXmASpmTIFEy
-Monthly payments will be paid once per month, on EITHER the 15th OR the 30th, depending on your enrollment date. If the payment date falls on a weekend or bank holiday, it will be paid the following Monday/following business day. Payments will be deposited by 5 PM CST on the day of payment.
-
-Below is an image with the detailed payment breakdown summary.
-Thank you again,
--STAR Study Team
-```    
-
-
-You also need to attach the [payment infographic image](images\monthly_payment_detail_infographic.png). This should also be saved on your RA computers' desktop for easy access. 
-
-8. **Post a new thread for the participant in Slack in the risk2_admin channel**    
-    a. If there was anything unusual about the call or the participant had any trouble, add that information as a reply to the thread
-
-9.  **Submit a Visit Date Log**
-
-    a.  <https://uwmadison.co1.qualtrics.com/jfe/form/SV_2hPstJohCYbTmKi>
-    
-10. **Submit Session Guide (if you have not already done so)**
-
-    a.  <https://uwmadison.co1.qualtrics.com/jfe/form/SV_5o2UcfCxseFWpcW>
-
+[Click here for the next steps you need to take after a visit](after_onboarding_steps.qmd)
