--- a/consent_onboarding_script.qmd
+++ b/consent_onboarding_script.qmd
@@ -34,13 +34,13 @@ STAR Study Consent Form: https://uwmadison.co1.qualtrics.com/jfe/form/SV_6zzSu1d
 
 **\[Once the participant is connected (via phone), greet them, then ascertain they are in a safe and private place to complete the phone-visit before proceeding. Reschedule if needed.\]**
 
-#### Introduction
+### Introduction
 
 *Hi my name is \[name\] and I'm calling from the University of Wisconsin-Madison about the STAR study. Is now still a good time for you to talk?*
 
 *Great! First, I'm going to tell you more about today's session. I'll be talking about our research study and then, if you are eligible and interested, we can enroll you today. The entire process should take about 30 minutes, and if you have any questions at any point, feel free to interrupt me.*
 
-#### Description of the study
+### Description of the study
 
 *This is a 12-month study for people who are in recovery from opioids. It will involve using an Android smartphone app that was designed to help people in recovery, but it is not a treatment study, which means we will not be providing any treatment.*
 
@@ -62,7 +62,7 @@ STAR Study Consent Form: https://uwmadison.co1.qualtrics.com/jfe/form/SV_6zzSu1d
 
 **\[If yes, continue\]** **\[If no, thank and disconnect. No payment\]**
 
-#### Confirm phone OS- UW only
+### Confirm phone OS- UW only
 
 *Wonderful! So before we continue further, I'd just like to just verify that you do have an Android phone and that you have that phone available to you now?*
 
@@ -79,7 +79,7 @@ Mark Visit on google calendar as "ineligible - iPhone"
 **\[If yes\]**\
 *Ok great! In that case you are able to sign up for the study if you wish and we can go ahead and continue.*
 
-#### Consent
+### Consent
 
 *In this part of the visit, I am going to tell you a little bit more about the study and then give you the chance to formally agree to join it.*
 
@@ -112,7 +112,7 @@ Mark Visit on google calendar as "ineligible - iPhone"
 - *Every day they fill out a short survey that asks how they are doing.*  
 - *Once a month, they fill out a longer survey that asks about their thoughts and experiences in the last month.*  
 
-#### App Data
+### App Data
 
 *I'd also like to tell you more about what we'll be doing with the smartphone data that people share with us. After I tell you about each item I'll pause and ask if you have any questions.*
 
@@ -141,7 +141,7 @@ Mark Visit on google calendar as "ineligible - iPhone"
 *It is also important that you know that any use of opioids or other drugs has NO effect on your participation. You can continue to participate regardless of when or how many times you might use opioids or other drugs. It is ONLY important that you HONESTLY report any opioid or drug use when asked about it in the surveys.*
 
 
-#### Risks/Benefits
+### Risks/Benefits
 
 *Next we'll go over study risks and benefits. There are no major risks related to participation in this study. If you decide to participate, the main risk is that someone might see your information who should not.*
 
@@ -180,7 +180,7 @@ Mark Visit on google calendar as "ineligible - iPhone"
 
 *Then, finally, you'll download the app and set up an account.*
 
-#### Participant opens consent link & gives consent
+### Participant opens consent link & gives consent
 
 *Now is the time to open that link that I texted you. You should see a document that says "Consent Form" at the top. You can take as much time as you like to read it over and let me know when you are done. I will sit quietly here in case you have any questions.* 
 
@@ -239,7 +239,7 @@ Mark Visit on google calendar as "ineligible - iPhone"
 *Great! Now we will get the app downloaded on your phone and set up your study account. If you are not currently on WIFI, this app download will use your cellular data. Will that be okay?*
 
 
-#### App Download
+### App Download
 
 *Great! Please tap continue, and the download should start automatically. The app will guide you through set up. You should agree to the permissions the app or your phone asks of you as it is setting up.*
 
@@ -303,7 +303,7 @@ Mark Visit on google calendar as "ineligible - iPhone"
 
 *Do you have any questions on that?*
 
-#### App Guidelines
+### App Guidelines
 
 *Now I want to take some time to tell you a bit about the STAR user guidelines. These guidelines were designed to make sure our participants and staff are protected and are treated professionally and with respect.*
 
@@ -319,7 +319,7 @@ Mark Visit on google calendar as "ineligible - iPhone"
 
 *All in-app messages, posts, and phone calls with staff are subject to review by the STAR team, and staff will remove any discussion post, comment, or individual member who does not follow these guidelines. You can find more information about the app guidelines and the review process for violating app guidelines in the Study Information tab in the STAR App.*
 
-#### Final Steps
+### Final Steps
 
 *The final step of enrolling in the study will be to watch tutorial videos that describe the app's recovery resources and explain how to complete the different study tasks. You can find these video tutorials in a text message I will send to you shortly after we complete this phone call.*
 
@@ -350,4 +350,4 @@ Mark Visit on google calendar as "ineligible - iPhone"
 
 
 ## Steps To Complete AFTER an Onboarding Session
-[Click here for the next steps you need to take after a visit](after_onboarding_steps.qmd)
+[Click here for the next steps you need to take after a visit](after_onboarding_steps.qmd){target="_blank"}
