--- a/faq_consent_onboarding.qmd
+++ b/faq_consent_onboarding.qmd
@@ -6,89 +6,84 @@
 ## General tips if you do not understand the question or do not know the answer:
 
 -   Try restating the question to the participant to make sure you understood them\
--   "Can you tell me a little more about what you're concerned about?"\
--   "We have not gotten that question before but I'll send a message to my supervisor/pass that question onto the STAR study coordinator"
+-   "I'm afraid I don't know the answer to that question, but I will reach out to my supervisor and get back to you as soon as possible"
 
 **Q: "Can I have my {friend/partner/anyone} here with me?"**
 
-A: Yes! But be aware that we will be asking about sensitive topics, drug use, personal questions.
+A: Yes! But please be aware that we will be discussing sensitive topics. If you do not feel comfortable in your current environment, let us know and we can reschedule your session.
+
+**Q: "Can a person here with me also enroll in the study?"**
+
+A: They would need to complete their own screener and call session with us.
 
 **Q: "What do you mean by an ongoing cell phone plan?"**
 
-A: By "ongoing cell phone plan", we are talking about a cell phone plan that you pay monthly to the same cell service provider, and that you plan on maintain for the next year
+A: By "ongoing cell phone plan", we are talking about a cell phone plan that you or someone else pays monthly to the same cell service provider.
+
+**Q: "What if I don't need the monthly phone bill payment/ don't pay my own phone bill?"**
+
+A: No worries. We will provide the $50 for your phone bill payment regardless and do not track your spending.
 
 **Q: "What will actually happen when I report lapses?"**
 
-A: We understand that sometimes, slips are a part of recovery. Reporting a lapse will not affect your participation in any way. Also, when you report a lapse, and any other data you provide through the app, that information is fed into a computer algorithm. There is no one actively looking at data as you provide it.
-
-**Q: "What do the payments show up as?"**
-
-A: On your cell phone payments, they should just show up as "online payment"
+A: Reporting a lapse will not affect your participation in any way. The information is stored in our computer, and no one on our team will see it in live time.
 
 **Q: "What if I miss a task?"**
 
-A: If you miss one, we understand, just try to complete the next one. But an important part of participating in this study is providing daily or near daily for 12 months, so if you do not think that daily or near daily study tasks will fit into your life, this study may not be a good fit for you.
+A: It is okay and not unexpected that participants will miss a survey here and there. We ask that participants complete at least 6 daily surveys a week, but we do understand there are circumstances that may prevent this at times.
+Once a survey has closed, we will be unable to open it again. Completing surveys regularly is a requirement of the study, and a participant will be removed if this requirement is not met.
 
 **Q: "Who will be looking at my text messages?"**
 
-A: Nobody is going to be monitoring your text messages and no matter what we will not be reading your messages, instead the content of your messages will be fed into a computer algorithm. Also any your name and other personal contact information will be removed from the data before it is fed into the computer algorithm.
+A: The individuals working on our team will never be able to read your messages. Instead, their contents will be stored in our computer, which will sort through everyone's texts at the end of the study and pull key words, for instance "stress" before reported relapses or "happy" when talking to someone you reported was helpful to your recovery. Any personal contact information will be removed from the data before it is fed into the algorithm.
 
 **Q: "What type of group level characteristics would you use/How would you use my text messages/ what does group level characteristics mean?"**
 
-A: We might mention group level data like the percentage of participants in our study are working but we will never mention. For example, your private message would never show up in a paper, instead we might say the total number of swear words used by participants.
+A: Group level data like the percentage of participants in our study of a certain gender, race, ethnicity, or level of schooling may be included in published reports. Private, personal information such as your name, location, or texts will never be shared with anyone outside of the study team.
 
-**Q: "Will you be looking at what I put into my motivation/gratitude?"**
-
-A: We will have access to that data however, nobody on staff will be actively monitoring or looking at the text of what you put. Instead, what you put will be fed into your algorithm.
-
-**Q: "Will my cell provider know that I am in this study?"**
-
-A: No. They will only see that they are receiving payment from University of Madison.
 
 **Q: "When would the Certificate of Confidentiality have to be broken?"**
 
-A: If you explicitly communicate via an email, phone visit, or other direct communication that you or others are at risk. But we put in all the stops to not share confidentiality and our research lab has never had to break confidentiality.\
-**Follow up Question:** Are there any risks that you are particularly worried about?
+A: If you explicitly communicate via an email, phone visit, or other direct communication that you or others are at risk. Examples of this would include reported child or elder abuse.
 
 **Q: "How would being in this study help me?"**
 
-A: These are not treatments. In similar previous studies people found it helpful however this is NOT treatment.
+A: This study is not a treatment and we cannot guarantee that it will serve any benefit to you, though we do hope that what we learn from this research will be useful for other individuals in recovery in the future.
 
-**Q: "Will this study make me (depressed, anxious, etc)/ Has this study made people (depressed, anxious, etc.)"**
 
-A: Were people depressed while emotional distress is a potential result, it is not a typical response and IRB (oversight committee) reviewed this and determined it to minimal risk.
+**Q: "Can I delete anything I don't want to share?"**
 
-**Q: "If I drop out, when would the cell service payments stop?"**
+A: Yes. After completing a call, receiving or sending a text you do not want us to see, simply delete it from your call or SMS logs. You can also turn off your location sharing for a period of time (up to 6 hours) if you do not want us to see where you are going.
+Keep in mind we will never see any of this information in live time, and our team will never read your messages.
 
-A: I am not 100% sure, but it will likely depend on when you decide to withdraw as a participant.
+**Q: "What if I need to change phones will on study?"**
 
-**Q: "Should I delete anything?"**
+A: That is absolutely no problem, as long as your new phone is an android. Simply send us a message to indicate the change and we will assist you in getting STAR downloaded on your new device.
 
-A: You don't need to delete any data, there is nothing that you would HAVE to delete.
+**Q: "What if my phone dies a lot/ I am often in areas with no service?"**
 
-**Q: "Why do you have all of these compliance requirements? (if participant expresses concern/hesitation about the idea of completing the tasks)"**
+A: We understand there are circumstances wherein an individual's phone may die or they may not have service to share data. If you anticipate you would not regularly be able to keep your phone on or connected to service, this study may not be a good fit for you.
 
-A: Participation in this study is completely voluntary and we understand that you may not be able to provide data at every point, but the goal of this study is to have participants providing these data so if you are not comfortable with providing any of these data, we can talk about that.
-
-**Q: "How are you going to track all of this if you are not looking at your data?"**
-
-A: It's the algorithm. Our computer algorithm will let us know if a participant is not meeting the minimum data requirements.
-
-**Q: "What if my phone dies a lot?"**
-
-A: We understand that sometimes peoples phone dies or may be lost but if you think that having a fully charged phone for the duration of the study would be challenging this might not be the best study for you.
-
-**Q: "What if I try to provide data but there is no cell service?**
-
-A: If you experience this contact us and we will try to work with you to troubleshoot the issue. If you anticipate that you will not be able to have either cell service or access to WIFI for long periods of time, this study may not be a good fit for you.
-
-**Q: "Do I have to type in my legal name?"**
-
-A: No, all you have to do is provide a full name. Please use your preferred full name.
 
 **Q: Can I tell other people I'm in the study?**
 
-A: You are free to share any information with whoever you feel comfortable with, but we do not provide information to those people
+A: You are free to share any information with whomever you feel comfortable, but we will not share any details of your study participation with anyone outside of the study team.
+
+**Q: What if I know someone who may be interested in participating?"**
+
+A: Wonderful! We are still actively recruiting. Please send your friend the link to our online screener survey (https://starstudy.wisc.edu/). If they are eligible, they will be able to schedule a call session with us to get enrolled.
+
+**Q: How/when am I going to get paid?"**
+
+A: Payment will be loaded directly to the debit card we will send to your address. You will receive payment once a month, on either the 15th or 30th depending on your start date.
+
+**Q: How will I receive monthly phone bill payments?"**
+
+A: The $50 for your phone bill payment will be issued directly onto your debit card with the rest of your monthly payment.
+
+**Q: Can you put money directly into my bank account/ issue it a different way?"**
+
+A: Unfortunately, no. We can only provide compensation via the payment debit card we will mail to your address.
 
 **Q: How can I create a new email?**\
 A: Instructions for creating a Gmail.\
@@ -109,7 +104,7 @@ A: To see if you have successfully downloaded the STAR app, you can hit settings
 
 **Q: If I don't want to be a participate anymore, do I just delete the app on my phone? Does that prevent the research team get my data?**  
 
-A: If you are no longer interested in participating, you should notify us and then delete the app. Deleting the STAR app or even turn off the data access permissions would prevent the team to see any information on your device.  
+A: If you are no longer interested in participating, you should notify the STAR research team and then delete the app. Deleting the STAR app or disabling permissions will prevent us from collecting data from your device.  
 
 
 
